Cambios en la base de datos y añadiendo proceso

--- a/PrototipoP32P2021/src/main/java/vista/MdiGeneral.form
+++ b/PrototipoP32P2021/src/main/java/vista/MdiGeneral.form
@@ -69,6 +69,16 @@
               <Font name="Dialog" size="12" style="2"/>
             </Property>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Devoluciones"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
@@ -148,12 +158,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="1185" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="1342" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="640" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="791" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
