--- a/PrototipoP32P2021/src/main/java/vista/FrmDevolucion.form
+++ b/PrototipoP32P2021/src/main/java/vista/FrmDevolucion.form
@@ -6,7 +6,7 @@
     <Property name="iconifiable" type="boolean" value="true"/>
     <Property name="maximizable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Devolucion"/>
+    <Property name="title" type="java.lang.String" value="Asignacion a Devolucion"/>
     <Property name="visible" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
