--- a/PrototipoP32P2021/src/main/java/vista/MdiGeneral.form
+++ b/PrototipoP32P2021/src/main/java/vista/MdiGeneral.form
@@ -72,7 +72,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Devoluciones"/>
+                <Property name="text" type="java.lang.String" value="Asignacion a Devoluciones"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
